--- a/official/docker-compose.yml
+++ b/official/docker-compose.yml
@@ -11,6 +11,6 @@ services:
       EULA: "TRUE"
       VERSION: "LATEST"
     volumes:
-      - /var/mc_Official_data:/data
+      - /var/mc_official_data:/data
     ports:
       - 80:25565
